# RobotPi

./: .cproject  .gitignore  .gitlab-ci.yml  .project  CMakeLists.txt  Config.in  CrossCompile.cmake  README.md  robotpi.mk  yuv_converter.py
cmake/: arm-none-linux-gnueabihf.toolchain.cmake  git_version.cmake
cmake/Modules/: FindMMAL.cmake
doc/: CalibrationPattern6x6orange.odg
launch/: RobotPi Debug.launch  RobotPi Release.launch
robotpi/DEBIAN/: control  postinst  prerm
robotpi/lib/systemd/system/: robotpi.service
src/: RobotPi.cpp  RobotPi.h  commands.h  main.cpp  tests.cpp  tests.h  version.h
src/detector/: GoalLocalisation.cpp  GoalLocalisation.h  MiniPreview.cpp  MiniPreview.h  RegionsLocalisation.cpp  RegionsLocalisation.h  WallLocalisation.cpp  WallLocalisation.h
src/interface/: Command.cpp  Command.h  CommandTransceiver.h  Detector.h  FrameYUV420.cpp  FrameYUV420.h  ProcessingStep.cpp  ProcessingStep.h  RLEFrame.cpp  RLEFrame.h  State.h
src/pc/: cvutils.cpp  cvutils.h  test_main.cpp
src/rpi/: RPiCamera.cpp  RPiCamera.h  RobotPi.cpp  RobotPi.h  StatGenerator.cpp  StatGenerator.h  TigerComm.cpp  TigerComm.h  main.cpp  tests.cpp  tests.h
src/steps/: BallLocalisation.cpp  BallLocalisation.h  CameraCalibration.cpp  CameraCalibration.h  ColorClassifierYUV.cpp  ColorClassifierYUV.h  MiniPreview.cpp  MiniPreview.h  PointDistanceSensor.cpp  PointDistanceSensor.h  RegionExtractor.cpp  RegionExtractor.h  RleRecorder.cpp  RleRecorder.h  YPresummer.cpp  YPresummer.h
src/util/: BallTracker.cpp  BallTracker.h  CMVision.cpp  CMVision.h  Camera.cpp  Camera.h  Circle.cpp  Circle.h  Color.cpp  Color.h  ColorClassifierYUV.cpp  ColorClassifierYUV.h  EnumIterator.h  KalmanFilter.h  Line.cpp  Line.h  Presummer.cpp  Presummer.h  RLEFile.cpp  RLEFile.h  TimeSync.cpp  TimeSync.h  TrackingFilterPosVel.h  UDPSocket.cpp  UDPSocket.h  VarInt.h  WorkerPool.cpp  WorkerPool.h  YUVFile.cpp  YUVFile.h  crc.cpp  log.h
systemd/: robotpi.service
